create github pages

--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-black display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                        FlauschCraft</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-rL7g0hTuNb mbr-parallax-background" id="header1-1g">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header1 cid-rL7g0hTuNb mbr-parallax-background" id="header1-1g">
 
     
 
@@ -75,9 +72,9 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    Selbstgemachtes</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
-                    Willkommen bei FlauschCraft</h3>
+                    <br>Selbstgemachtes<br></h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2"><em>
+                    Willkommen bei FlauschCraft</em></h3>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
                     Wir fertigen individuelle und einzigartige Produkte mit höchstem Qualitätsanspruch um Andere oder sich selbst zu beschenken.
                 </p>
