--- a/impressum.html
+++ b/impressum.html
@@ -41,11 +41,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-black display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                        FlauschCraft</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-rL74C6aKyK" id="content4-1f">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="mbr-section content4 cid-rL74C6aKyK" id="content4-1f">
 
     
 
