--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co"><strong>
+                    <a class="nav-link link text-black display-4" href="index.html#features9-v"><strong>
                         Leistungen &amp; Produkte</strong></a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co"><strong>
-                        Leistungen &amp; Produkte</strong></a></li>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#info2-f"><strong>
+                        Filamente</strong></a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co"><strong>
-                        Filamente</strong></a>
+                    <a class="nav-link link text-black display-4" href="index.html#contacts2-1k"><strong>
+                        Kontakt</strong></a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header1 cid-rL7g0hTuNb mbr-parallax-background" id="header1-1g">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-rL7g0hTuNb mbr-parallax-background" id="header1-1g">
 
     
 
