--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -75,7 +75,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
                 Willkommen bei FlauschCraft</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                Wir fertigen individuelle und einzigartige Produkte mit höchstem Qualitätsanspruch um Andere oder sich selbst zu beschenken.
+                Wir fertigen individuelle und einzigartige Produkte rund um <strong>3D Druck</strong> mit höchstem Qualitätsanspruch um Andere oder sich selbst zu beschenken.
             </p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="index.html#features9-v">Mehr</a></div>
         </div>
@@ -102,10 +102,10 @@
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>
-                        Leistungen &amp; Produkte</strong></h2>
+                        3D Druck</strong></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">
-                        3D Druck mit höchster Qualität</p>
+                        Leistungen &amp; Produkte</p>
                     </div>
 
                     <div class="block-content">
@@ -247,7 +247,7 @@
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
                     Hochqualitative Filamente</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-5">
-                    Wir verwenden ausschließlich hochwertige Filamente von <strong>Prusament</strong>&nbsp;</h3>
+                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von <strong><a href="https://prusament.com/" target="_blank">Prusament</a></strong>&nbsp;</h3>
             </div>
         </div>
     </div>
@@ -605,7 +605,7 @@
     </div>
 </section>
 
-<section class="cid-rKZL1RQ3cz" id="footer5-1">
+<section class="cid-rKZL1RQ3cz mbr-reveal" id="footer5-1">
 
     
 
@@ -621,7 +621,7 @@
                 </div>
             </div>
             <div class="col-md-9">
-                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="impressum.html"><strong></strong></a><strong><a href="impressum.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Impressum &amp; Datenschutz&nbsp; &nbsp;&nbsp;</a></strong></p>
+                <p class="mbr-text align-right links mbr-fonts-style display-7"><a href="impressum.html"><strong></strong></a><strong><a href="impressum.html" class="text-white">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Impressum &amp; Datenschutz&nbsp; &nbsp;&nbsp;</a></strong></p>
             </div>
         </div>
         <div class="footer-lower">
