--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -75,8 +75,7 @@
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
                 Willkommen bei FlauschCraft</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                Wir fertigen individuelle und einzigartige Produkte rund um <strong>3D Druck</strong> mit höchstem Qualitätsanspruch um Andere oder sich selbst zu beschenken.
-            </p>
+                Wir fertigen individuelle und einzigartige Produkte rund um<br><strong>3D Druck</strong>.<strong> </strong>Natürlich<strong>&nbsp;</strong>mit höchstem Qualitätsanspruch.</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="index.html#features9-v">Mehr</a></div>
         </div>
     </div>
