create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -114,7 +114,7 @@
                                     <span class="mbr-iconfont mbri-extension" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7">Individuelle 3D Drucke</h4>
+                                    <h4 class="card-title mbr-fonts-style display-7">Individueller 3D Druck</h4>
                                 </div>
                             </div>                
 
