create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -114,7 +114,7 @@
                                     <span class="mbr-iconfont mbri-extension" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7">Individueller 3D Druck</h4>
+                                    <h4 class="card-title mbr-fonts-style display-7"><strong>Individueller 3D Druck</strong></h4>
                                 </div>
                             </div>                
 
@@ -129,12 +129,12 @@
                                     <span class="mbr-iconfont socicon-etsy socicon" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102);"></span>
                                 </div>     
                                 <div class="media-body">
-                                    <h4 class="card-title mbr-fonts-style display-7">Sofort verfügbare 3D Drucke</h4>
+                                    <h4 class="card-title mbr-fonts-style display-7"><strong>Sofort verfügbare 3D Drucke</strong></h4>
                                 </div>
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-5">
+                                <p class="block-text mbr-fonts-style display-7">
                                     Du findest unsere sofort verfügbaren Produkte im <a href="https://www.etsy.com/shop/"><strong>FlauschCraft Etsy Shop</strong></a>
                                 </p>
                             </div>
@@ -244,7 +244,7 @@
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
                     Hochqualitative Filamente</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white mbr-fonts-style display-5">
-                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von <strong><a href="https://prusament.com/" target="_blank">Prusament</a></strong>&nbsp;</h3>
+                    Wir verwenden für unsere 3D Drucke ausschließlich hochwertige Filamente von <a href="https://prusament.com/" target="_blank"><strong>Prusament</strong></a>&nbsp;</h3>
             </div>
         </div>
     </div>
