--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -580,7 +580,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><a href="impressum.html"><b>Impressum &amp; Datenschutz</b></a><br><br></strong>© Copyright 2019 Mobirise - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><a href="impressum.html"><b>Impressum &amp; Datenschutz</b></a><br><br></strong>© Copyright 2019 FlauschCraft by Daniela Kräuter - All Rights Reserved
                 </p>
             </div>
         </div>
