create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header9 cid-rL7kpGGeIP mbr-fullscreen mbr-parallax-background" id="header9-1l">
 
     
 
@@ -565,7 +565,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2">Sende deine Anfrage</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="mailto:hallo@flauschcraft.com">Email</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="mailto:hallo@flauschcraft.com">Email senden</a></div>
             </div>
         </div>
     </div>
