create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header5 cid-rLbhqOAG9V mbr-fullscreen" id="header5-1y">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header5 cid-rLbhqOAG9V mbr-fullscreen" id="header5-1y">
 
     
 
@@ -559,7 +559,7 @@
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">
                     Du hast eine Idee oder einen Auftrag?</h3>
-                <h2 class="align-left mbr-bold mbr-fonts-style display-2">Sende deine Anfrage</h2>
+                <h2 class="align-left mbr-bold mbr-fonts-style display-2">Sende uns deine Anfrage</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
                 <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="mailto:hallo@flauschcraft.com">Email senden</a></div>
