--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header5 cid-rLbhqOAG9V mbr-fullscreen" id="header5-1y">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header5 cid-rLbhqOAG9V mbr-fullscreen" id="header5-1y">
 
     
 
@@ -164,7 +164,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Design</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Bringe ein fertiges Design mit, oder lass dich von uns unterstützen deine Ideen zu verwirklichen</p>
+                            Bringe ein fertiges Design mit, oder lass dich von unserem Team unterstützen.</p>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Druck</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Die Druckvorbereitung und der Druck dauern oft mehrere Stunden. Du kannst dir deinen Druckvorgang auf unserem <a href="https://www.youtube.com/channel/UCW0jPsL6AxaK_1S8y0gxJKw">YouTube-Kanal</a>&nbsp;im Anschluss ansehen</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Die Druckvorbereitung und der Druck dauern oft mehrere Stunden. Du kannst dir deinen Druckvorgang auf unserem <a href="https://www.youtube.com/channel/UCW0jPsL6AxaK_1S8y0gxJKw">YouTube-Kanal</a>&nbsp;im Anschluss ansehen.</p>
                     </div>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">
                             Versand</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Wir versenden nachhalting mit DHL-Go Green</p>
+                            Wir versenden nachhalting mit DHL-Go Green.</p>
                     </div>
                 </div>
             </div>
