--- a/credits.html
+++ b/credits.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
 
     
 
@@ -90,8 +90,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="#top">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="#top">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter</p>
             </div>
         </div>
     </div>
