--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -584,8 +584,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="#top">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter - All Rights Reserved
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><b><a href="impressum.html">Impressum &amp; Datenschutz</a>&nbsp;</b></strong><strong><br><a href="#top">Credits</a></strong><br><strong><br></strong>© Copyright 2020 FlauschCraft by Daniela Kräuter</p>
             </div>
         </div>
     </div>
