--- a/credits.html
+++ b/credits.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content4 cid-rLbm1W6NBL" id="content4-22">
 
     
 
