--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header11 cid-rLbBrtQ8x7 mbr-fullscreen" id="header11-23">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -77,8 +77,7 @@
     
     <div class="container align-left">
         <div class="media-container-column mbr-white col-md-12">
-            <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5">
-                Willkommen bei FlauschCraft</h3>
+            <h3 class="mbr-section-subtitle py-3 mbr-fonts-style display-5"></h3>
             <h1 class="mbr-section-title py-3 mbr-fonts-style display-1"><strong>Selbstgemachtes in 3D&nbsp;</strong></h1>
             <p class="mbr-text py-3 mbr-fonts-style display-5">Wir fertigen individuelle und einzigartige Produkte rund um<br><strong>3D Druck</strong>. Wir legen wert auf höchste Qualität und top Materialien. Besuche unseren Shop bei <a href="https://www.etsy.com" target="_blank"><strong>Etsy</strong></a>.</p>
             <div class="mbr-section-btn py-4"><a class="btn btn-md btn-primary display-4" href="index.html#features11-1n">Mehr</a></div>
